# stripe-csv

./: .gitignore  Cargo.toml  README.md
samples/: 01-fees.csv
src/: amount_serde.rs  args.rs  lib.rs  main.rs
src/parser/: fees.rs
